--- a/source/sass/catalog/promotion.scss
+++ b/source/sass/catalog/promotion.scss
@@ -3,19 +3,16 @@
   height: 290px;
   background-image: url("../img/catalog/cat-box.jpg");
   background-repeat: no-repeat;
-}
+  margin-top: 30px;
 
-@media (min-width: $tablet-width) {
-  .promotion {
+  @media (min-width: $tablet-width) {
     height: 200px;
     margin-top: 70px;
     background-image: none;
     margin-bottom: 76px;
   }
-}
 
-@media (min-width: $desktop-width) {
-  .promotion {
+  @media (min-width: $desktop-width) {
     background-image: url("../img/catalog/cat-box.jpg");
     background-repeat: no-repeat;
     background-position: right;
@@ -27,16 +24,14 @@
   }
 }
 
-@media (min-width: $tablet-width) {
-  .promotion__wrapper {
+.promotion__wrapper {
+  @media (min-width: $tablet-width) {
     background-image: url("../img/catalog/cat-box-768.jpg");
     width: 708px;
     height: 200px;
   }
-}
 
-@media (min-width: $desktop-width) {
-  .promotion__wrapper {
+  @media (min-width: $desktop-width) {
     background-image: none;
     width: 245px;
     height: 290px;
@@ -47,10 +42,8 @@
   position: relative;
   left: 100px;
   top: 50px;
-}
 
-@media (min-width: $tablet-width) {
-  .promotion__icon {
+  @media (min-width: $tablet-width) {
     top: 60px;
     left: 80px;
   }
@@ -65,18 +58,14 @@
   display: block;
   text-align: center;
   color: #ffffff;
-}
 
-@media (min-width: $tablet-width) {
-  .promotion__text {
+  @media (min-width: $tablet-width) {
     margin-top: -15px;
     margin-right: 100px;
     text-align: left;
   }
-}
 
-@media (min-width: $desktop-width) {
-  .promotion__text {
+  @media (min-width: $desktop-width) {
     margin: 0 auto;
     margin-top: 105px;
     text-align: center;
