--- a/source/sass/index/results-table.scss
+++ b/source/sass/index/results-table.scss
@@ -3,16 +3,27 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-}
 
-@media (min-width: $tablet-width) {
-  .results-table {
+  @media (min-width: $tablet-width) {
     max-width: 366px;
     margin-top: 54px;
   }
 }
 
-.results-table__weight,
+.results-table__weight {
+  width: 125px;
+  padding-top: 9px;
+  text-align: center;
+  border: 1px solid #cdcdcd;
+  border-radius: 3px;
+  margin-bottom: 15px;
+
+  @media (min-width: $tablet-width) {
+    width: 162px;
+    height: 77px;
+  }
+}
+
 .results-table__time {
   width: 125px;
   padding-top: 9px;
@@ -20,11 +31,8 @@
   border: 1px solid #cdcdcd;
   border-radius: 3px;
   margin-bottom: 15px;
-}
 
-@media (min-width: $tablet-width) {
-  .results-table__weight,
-  .results-table__time {
+  @media (min-width: $tablet-width) {
     width: 162px;
     height: 77px;
   }
@@ -40,10 +48,8 @@
   color: #000000;
   margin-bottom: 8px;
   margin-top: 8px;
-}
 
-@media (min-width: $tablet-width) {
-  .results-table__value {
+  @media (min-width: $tablet-width) {
     font-size: 30px;
     line-height: 37px;
   }
@@ -59,20 +65,16 @@
   margin-left: 19px;
   margin-bottom: -12px;
   text-transform: lowercase;
-}
 
-@media (min-width: $tablet-width) {
-  .results-table__description {
+  @media (min-width: $tablet-width) {
     background-color: #ffffff;
     width: 130px;
     font-size: 14px;
     margin-top: 11px;
     padding: 0;
   }
-}
 
-@media (min-width: $desktop-width) {
-  .results-table__description {
+  @media (min-width: $desktop-width) {
     background-color: #eaeaea;
   }
 }
