Добавляет главное меню в мобильной версии с использованием JS.

--- a/source/sass/header/main-header.scss
+++ b/source/sass/header/main-header.scss
@@ -11,8 +11,21 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  position: relative;
 
   @media (min-width: $desktop-width) {
     padding-top: 53px;
+  }
+}
+
+.main-header__logo-icon {
+  &:hover {
+    opacity: 0.6;
+    transition: 0.25s ease-in-out;
+  }
+
+  &:active {
+    opacity: 0.3;
+    transition: 0.25s ease-in-out;
   }
 }
