--- a/source/sass/catalog/promotion.scss
+++ b/source/sass/catalog/promotion.scss
@@ -4,6 +4,7 @@
   background-image: url("../img/catalog/cat-box.jpg");
   background-repeat: no-repeat;
   margin-top: 30px;
+  margin-bottom: 35px;
 
   @media (min-width: $tablet-width) {
     height: 200px;
