--- a/source/sass/header/main-navigation.scss
+++ b/source/sass/header/main-navigation.scss
@@ -51,6 +51,16 @@
   color: #000000;
   text-decoration: none;
 
+  &:hover {
+    opacity: 0.6;
+    transition: 0.25s ease-in-out;
+  }
+
+  &:active {
+    opacity: 0.3;
+    transition: 0.25s ease-in-out;
+  }
+
   @media (min-width: $tablet-width) {
     font-size: 18px;
     line-height: 24px;
@@ -70,11 +80,19 @@
 }
 
 .main-navigation__link--activ {
+
+  &:hover,
+  &:active {
+    opacity: 1;
+  }
+
   @media (min-width: $tablet-width) {
     padding-bottom: 8px;
     border-bottom: 2px solid #68b738;
   }
+}
 
+.main-navigation__link--index-activ {
   @media (min-width: $desktop-width) {
     border-bottom: 2px solid #ffffff;
   }
@@ -101,7 +119,7 @@
     width: 320px;
     height: 2px;
     top: -2px;
-    background-color: #ffffff;
+    background-color: inherit;
   }
 
   @media (min-width: $tablet-width) {
@@ -113,7 +131,7 @@
   }
 }
 
-.main-navigation--nojs {
+.main-navigation--no-js {
   display: block;
   position: relative;
   top: 0;
