--- a/source/sass/footer/page-footer.scss
+++ b/source/sass/footer/page-footer.scss
@@ -39,12 +39,14 @@
 .page-footer__logo-icon {
   &:hover {
     opacity: 0.6;
-    transition: 0.25s ease-in-out
+    transition: 0.25s ease-in-out;
   }
+
   &:active {
     opacity: 0.3;
     transition: 0.25s ease-in-out;
   }
+
   @media (min-width: $tablet-width) {
     min-width: 142px;
   }
