--- a/source/sass/index/slider.scss
+++ b/source/sass/index/slider.scss
@@ -40,7 +40,6 @@
     width: 560px;
     height: 512px;
     object-fit: cover;
-
   }
 }
 
@@ -62,7 +61,7 @@
   position: absolute;
   width: 4px;
   height: 100%;
-  top: 0px;
+  top: 0;
   left: 50%;
   background-color: #666666;
   border-radius: 2px;
@@ -84,7 +83,7 @@
     height: 40px;
     left: 50%;
     transform: translateX(-50%);
-    top: calc(50% - 40px/2 + 0.49px);
+    top: 46%;
     border: 2px solid #666666;
     border-radius: 25px;
     background-image: url("data:image/svg+xml,%3Csvg width='24' height='18' viewBox='0 0 24 18' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 0L0 9L8 18V0Z' fill='%23666666'/%3E%3Cpath d='M24 9L16 0V18L24 9Z' fill='%23666666'/%3E%3C/svg%3E%0A");
