Добавляет исправления после код-ревью наставника

--- a/source/sass/form/optionally.scss
+++ b/source/sass/form/optionally.scss
@@ -96,47 +96,46 @@
   width: 0;
   height: 0;
   margin: 0;
+}
 
-  & + .optionally__name {
-    cursor: pointer;
-    display: flex;
-    align-items: center;
+.optionally__checkbox + .optionally__name {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+.optionally__checkbox + .optionally__name::before {
+  content: "";
+  display: block;
+  width: 30px;
+  height: 30px;
+  border: 1px solid #cdcdcd;
+  margin-right: 16px;
+  background-repeat: no-repeat;
+  background-position: center;
+
+  @media (min-width: $tablet-width) {
+    margin-right: 20px;
+    width: 40px;
+    height: 40px;
   }
+}
 
-  & + .optionally__name::before {
-    content: "";
-    display: block;
-    width: 30px;
-    height: 30px;
-    border: 1px solid #cdcdcd;
-    margin-right: 16px;
-    background-repeat: no-repeat;
-    background-position: center;
+.optionally__checkbox:checked + .optionally__name::before {
+  border-color: #cdcdcd;
+  background-color: #ffffff;
+  background-image: url("../img/form/tick.svg");
+}
 
-    @media (min-width: $tablet-width) {
-      margin-right: 20px;
-      width: 40px;
-      height: 40px;
-    }
-  }
+.optionally__checkbox:not(:disabled)+.optionally__name:hover::before {
+  border-color: #bababa;
+}
 
-  &:checked + .optionally__name::before {
-    border-color: #cdcdcd;
-    background-color: #ffffff;
-    background-image: url("data:image/svg+xml,%3Csvg width='19' height='15' viewBox='0 0 19 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7 11.718L1.3 5.26951L0.25 6.45739L7 14.0938L18.25 1.36648L17.2 0.09375L7 11.718Z' fill='%2368B738'/%3E%3C/svg%3E%0A");
-    background-size: 73%;
-  }
+.optionally__checkbox:disabled + .optionally__name {
+  opacity: 0.3;
+  pointer-events: none;
+}
 
-  &:not(:disabled) + .optionally__name:hover::before {
-    border-color: #bababa;
-  }
-
-  &:disabled + .optionally__name {
-    opacity: 0.3;
-    pointer-events: none;
-  }
-
-  &:focus-visible + .optionally__name::before {
-    outline: 2px solid #444444;
-  }
+.optionally__checkbox:focus-visible + .optionally__name::before {
+  outline: 2px solid #444444;
 }
