--- a/source/sass/common/page.scss
+++ b/source/sass/common/page.scss
@@ -1,16 +1,16 @@
 .page {
   height: 100%;
+}
 
-  &__body {
-    font-family: "Lato", "Arial", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    margin: 0 auto;
-    min-width: 320px;
-    min-height: 100%;
-    font-size: 14px;
-    line-height: 18px;
-    color: #444444;
-    background-color: #ffffff;
-  }
+.page__body {
+  font-family: "Lato", "Arial", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  margin: 0 auto;
+  min-width: 320px;
+  min-height: 100%;
+  font-size: 14px;
+  line-height: 18px;
+  color: #444444;
+  background-color: #ffffff;
 }
